--- a/Reports/5-bonus/Slide/Slide.tex
+++ b/Reports/5-bonus/Slide/Slide.tex
@@ -430,8 +430,9 @@ struct list_node{
         \end{lstlisting}
     \end{example}
 
-    \only<1>{The identifier \fbox{\lstinline{struct list_node}} is visible within the definition of the structure, although \fbox{\lstinline{struct list_node}} is an incomplete type. }
-    \only<2>{To render the identifier \fbox{\lstinline{struct list_node}} available, construct an empty structure before parsing the body of the structure definition, and complete the type after the definition parsing is done. }
+    The identifier \fbox{\lstinline{struct list_node}} is visible within the definition of the structure, although \fbox{\lstinline{struct list_node}} is an incomplete type. 
+    \\
+    To render the identifier \fbox{\lstinline{struct list_node}} available, construct an empty structure before parsing the body of the structure definition, and complete the type after the definition parsing is done. 
 \end{frame}
 
 % \subsection{Initialization}
